<resources>
    <string name="app_name">MeetingInfoDatabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_meeting_details">Save Meeting Details</string>
    <string name="search_meeting_details">Search Meeting Details</string>
    <string name="update_meeting_details">Update Meeting Details</string>
    <string name="meeting_id">Meeting ID</string>
    <string name="meeting_organizer">Meeting Organizer</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="save_meeting">Save Meeting</string>
    <string name="search_for_meeting_id">Search for Meeting ID</string>
    <string name="search_meeting">Search Meeting</string>
    <string name="meeting_id_to_update_time">Meeting ID to update time</string>
    <string name="update_meeting_time">Update Meeting Time</string>
    <string name="update_meeting_time">Update Meeting Time</string>
</resources>