<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SaveMeetingInfoFragment">

    <EditText
        android:id="@+id/etMeetingID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meeting_id"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etMeetingOrganizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meeting_organizer"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etMeetingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meeting_date"
        android:inputType="date"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etMeetingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meeting_time"
        android:inputType="time"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnSaveMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_meeting" />


</LinearLayout>